--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ nltk_data/
 # Exclude hash-like temporary files like 9b5ad71b2ce5302211f9c61530b329a4922fc6a4
 *[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f]*
 .lh/
+
+# Exclude large files
+chrome-linux64-121-0-6167-85/
+tika-server-standard-3.0.0.jar
+tika-server-standard-3.0.0.jar.md5
