remove large files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ nltk_data/
 chrome-linux64-121-0-6167-85/
 tika-server-standard-3.0.0.jar
 tika-server-standard-3.0.0.jar.md5
+chromedriver-linux64-121-0-6167-85/
